// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> Matches the Hero snapshot 1`] = `
<article
  className="hero"
  typeof="sioc:Item foaf:Document"
>
  <figure
    className="figure"
  >
    <img
      alt="Opioid Addiction"
      className="img"
      data-src="https://media.pri.org/s3fs-public/styles/feature_large/public/story/images/JL1_8064.JPG?itok=WfGYKL2U"
    />
  </figure>
  <div
    className="text"
  >
    <h2>
      <a
        className="title"
        href="https://google.com"
      >
        Opioid addicts are turning to a clinic in Mexico to break their addiction, but there's a catch. The treatment is illegal in the US.
      </a>
    </h2>
    <p
      className="summary"
    >
      Ibogaine is a powerful hallucinogenic drug that has been shown to have surprising success in treating addiction. But it comes with risks that, so far, have made its use in the US illegal.
    </p>
    <a
      className="category"
      href="https://google.com"
    >
      GlobalPost
    </a>
  </div>
</article>
`;

exports[`<Hero /> Matches the Hero snapshot with category url 1`] = `
<article
  className="hero"
  typeof="sioc:Item foaf:Document"
>
  <figure
    className="figure"
  >
    <img
      alt="Opioid Addiction"
      className="img"
      data-src="https://media.pri.org/s3fs-public/styles/feature_large/public/story/images/JL1_8064.JPG?itok=WfGYKL2U"
    />
  </figure>
  <div
    className="text"
  >
    <h2>
      <a
        className="title"
        href="https://google.com"
      >
        Opioid addicts are turning to a clinic in Mexico to break their addiction, but there's a catch. The treatment is illegal in the US.
      </a>
    </h2>
    <p
      className="summary"
    >
      Ibogaine is a powerful hallucinogenic drug that has been shown to have surprising success in treating addiction. But it comes with risks that, so far, have made its use in the US illegal.
    </p>
    <a
      className="category"
      href="http://bing.com"
    >
      GlobalPost
    </a>
  </div>
</article>
`;
